--- a/package.json
+++ b/package.json
@@ -4,14 +4,25 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack -w"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/polyfill": "^7.8.7",
+    "babel-loader": "^8.1.0",
+    "bottleneck": "^2.19.5",
     "clarifai": "^2.9.1",
     "got": "^11.0.3",
     "jsdom": "^16.2.2",
-    "nodemon": "^2.0.3"
+    "lazyload": "^2.0.0-rc.2",
+    "nodemon": "^2.0.3",
+    "yall-js": "^3.2.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.9.6",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11"
   }
 }
